# aa-customizer

./: .gitignore  CHANGELOG.md  README.md  adminddash.html  custom.css  customindex.html  login-spa.html  manage.py  pyproject.toml  settings_dev.py
.github/workflows/: publish.yml
aa_customizer/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  permissions.py  tests.py
aa_customizer/migrations/: 0001_initial.py  0002_url_fields_css_html.py  0003_alter_custombranding_custom_css_and_more.py  0003_restore_change_view_permissions.py  0004_merge_20260321_0059.py  0005_custombranding_sidebar_logo.py  0006_custombranding_login_layout.py  0007_custombranding_split_panel.py  0008_alter_custombranding_login_layout_and_more.py  0009_aacmediaimage_library_fk_fields.py  0010_alter_fields_django6_compat.py  0011_custombranding_video_loop_count.py  0012_login_background_filefield.py  0013_login_page_custom_code.py  0014_alter_custombranding_custom_css_and_more.py  0015_alter_custombranding_custom_css_and_more.py  0016_dashboard_and_superuser_dashboard_custom_code.py  0017_login_spa.py  0018_alter_custombranding_login_page_body_html_and_more.py
aa_customizer/static/aa_customizer/css/: aa-customizer.css  login-spa.css
aa_customizer/templates/aa_customizer/partials/: login_branding.html  login_spa_shell.html  navbar_logo.html
aa_customizer/templates/allianceauth/: base-bs5.html  icons.html
aa_customizer/templates/allianceauth/admin-status/: celery_bar_partial.html  esi_check.html  overview.html
aa_customizer/templates/authentication/: dashboard.html
aa_customizer/templates/menu/: menu-logo.html
aa_customizer/templates/public/: base.html  lang_select.html  login.html  middle_box.html
aa_customizer/templatetags/: aa_customizer_tags.py
docs/: index.html  showcase.html
templates/allianceauth/: base-bs5.html
