[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aa-customizer"
version = "1.0.1"
description = "Branding & customization plugin for Alliance Auth — custom logos, login backgrounds, favicons, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["alliance auth", "eve online", "branding", "customization"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "allianceauth>=4.0.0",
    "django-solo",
    "Pillow",
]

[project.urls]
Repository = "https://github.com/your-org/aa-customizer"

[tool.setuptools]
# The repo root IS the aa_customizer package — no subfolder needed.
package-dir = {"aa_customizer" = "."}
packages = ["aa_customizer", "aa_customizer.migrations", "aa_customizer.templatetags"]

[tool.setuptools.package-data]
"aa_customizer" = [
    "templates/**/*.html",
    "static/**/*",
    "migrations/*.py",
]
