[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aa-customizer"
version = "1.0.3"
description = "Branding & customization plugin for Alliance Auth — custom logos, login backgrounds, favicons, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["alliance auth", "eve online", "branding", "customization"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "allianceauth>=4.0.0",
    "django-solo",
    "Pillow",
]

[project.urls]
Repository = "https://github.com/Thrainkrilleve/aa-customizer"

[tool.setuptools.packages.find]
include = ["aa_customizer*"]

[tool.setuptools.package-data]
aa_customizer = [
    "migrations/*.py",
    "templates/aa_customizer/*.html",
    "templates/aa_customizer/**/*.html",
    "templates/allianceauth/*.html",
    "templates/public/*.html",
    "static/aa_customizer/css/*.css",
]
