[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aa-customizer"
version = "1.1.23"
description = "Branding & customization plugin for Alliance Auth — custom logos, login backgrounds, favicons, and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Thrainkrilleve" },
]
keywords = ["alliance auth", "eve online", "branding", "customization"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth>=4.0.0",
    "django-solo",
    "django-crum>=0.7.9",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/Thrainkrilleve/aa-customizer"
Repository = "https://github.com/Thrainkrilleve/aa-customizer"
"Bug Tracker" = "https://github.com/Thrainkrilleve/aa-customizer/issues"

[tool.setuptools.packages.find]
include = ["aa_customizer*"]

[tool.setuptools.package-data]
aa_customizer = [
    "migrations/*.py",
    "templates/aa_customizer/*.html",
    "templates/aa_customizer/**/*.html",
    "templates/allianceauth/*.html",
    "templates/public/*.html",
    "templates/menu/*.html",
    "static/aa_customizer/css/*.css",
]
